# federated-reliability-estimation

./: .gitignore  README.md  pyproject.toml
configs/: default.yaml
docs/: paper_plan.md
experiments/: plot_ablation.py  plot_results.py  plot_support2_results.py  run_communication_analysis.py  run_multiseed.py  run_multiseed_overhead.py  run_overhead_analysis.py  run_surrogate_ablation.py  run_surrogate_learning.py  run_transfer_analysis.py  summarize_overhead.py
fedrel_journal/: __init__.py  config.py  data.py  metrics.py  overhead.py  task.py
fedrel_journal/federated/: __init__.py  fedavg.py
fedrel_journal/methods/: __init__.py  baselines.py  calibration.py  confidence.py  embedding.py  gmm.py  hash_teacher.py  rhh.py
fedrel_journal/surrogate/: __init__.py  model.py  training.py
tests/: test_data.py  test_hash_teacher.py  test_metrics.py  test_surrogate_training.py  test_task_confidence.py
